2007-06-16  Kohei Yoshida  <kyoshida@novell.com>

	* workben/unittest/Makefile:	
	* source/inc/tool/global.hxx: fixed compilation problem for unittest.
	
	* source/inc/numeric/polyeqnsolver.hxx:
	* source/numeric/polyeqnsolver.cxx: added NotEnoughDataPoints exception
	  class, added clear() and size() methods.
	
	* source/numeric/polyeqnsolver_test.cxx: added test case for clear() &
	  added more test case.
	
	* workben/addon_pkg/Makefile: removed extra tab characters.

2007-06-13  Kohei Yoshida  <kyoshida@novell.com>

    * source/inc/tool/global.hxx:
    * source/numeric/lpmodel.cxx:
    * source/service/service.cxx: added preprocessing to deal with standalone
    scsolver uno component build.

    * workben/addon_pkg/Makefile: fixed it to build a standalone component 
    file once again.

2007-06-12  Kohei Yoshida  <kyoshida@novell.com>

    * workben/addon_pkg/*: re-added to make it possible to (once again) build
    the Solver component as a standalone UNO package.  Still work in progress.

2007-06-11  Kohei Yoshida  <kyoshida@novell.com>

    * source/inc/numeric/matrix.hxx:
    * source/numeric/matrix.cxx: minor variable name changes.

    * source/numeric/matrix_test.cxx: removed garbage from license header.

    * source/inc/numeric/polyeqnsolver.hxx:
    * source/numeric/polyeqnsolver.cxx:
    * source/numeric/polyeqnsolver_test.cxx:
    * source/numeric/makefile.mk: new class PolyEqnSolver added for solving
      arbitrary-order polynomial equations.

    * workben/unittest/Makefile: unit test for PolyEqnSolver.

2007-05-04  Kohei Yoshida  <kyoshida@novell.com>

    * source/service/service.cxx: commented out unused variables to remove 
      warnings.  

2007-05-04  Kohei Yoshida  <kyoshida@novell.com>

    * source/numeric/nlpmodel.cxx: added #include <stdio.h> header to fix 
      build breakage.  

2007-04-30  Kohei Yoshida  <kyoshida@novell.com>

    * workben/testcase/sudoku.ods:
    * workben/testcase/tc1.ods:
    * workben/testcase/tc2.ods: