@@ -49,8 +49,12 @@ struct DataPoint
 };
 
 /**
- * This class is used to solve a polynomial equation of an arbitrary order
- * based on a set of data points.
+ * This class is used to solve a polynomial equation of an arbitrary degree
+ * based on a set of data points.  It returns an array of coefficients from 
+ * the lowest order to highest, and the order of the equation equals the 
+ * number of data points minus 1 e.g. if two data points are given, the 
+ * equation to be solved will be linear, if three data points are given, the 
+ * equation will be quadratic, and so on.
  */
 class PolyEqnSolver
 {
@@ -66,6 +70,21 @@ public:
 private:
     ::std::list<DataPoint> m_DataPoints;
 };
+
+//--------------------------------------------------------------------
+
+/**
+ * Calculate the peak position of a quadratic equation.  The quadratic 
+ * equation must be specified in terms of a set of three coefficients: A, B 
+ * and C as in f(x) = Ax^2 + Bx + C, and they must be given as a column matrix 
+ * of (C, B, A) (note the reverse order). 
+ *  
+ * @param x the x position of the quadratic peak
+ * @param y the y value at the quadratic peak
+ * @param coef = (C, B, A) as in f(x) = Ax^2 + Bx + C.  Note that the order of
+ *             the coefficients are from the x^0 term toward x^2.
+ */
+void getQuadraticPeak(double& x, double& y, const Matrix& coef);
 
 }}
 
