@@ -1,3 +1,11 @@
+2007-06-17  Kohei Yoshida  <kyoshida@novell.com>
+
+	* source/inc/numeric/polyeqnsolver.hxx: 
+	* source/numeric/polyeqnsolver.cxx (getQuadPeak): added.
+	
+	* source/numeric/polyeqnsolver_test.cxx: added test case for 
+	  getQuadPeak() function.
+	
 2007-06-16  Kohei Yoshida  <kyoshida@novell.com>
 
 	* workben/unittest/Makefile:	
